{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 149,
  "lineage": "e0ab178a-a581-d663-8b32-98f3921c0352",
  "resources": [
    {
      "module": "module.kubernetes.module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "module.kubernetes.provider.google"
    },
    {
      "module": "module.kubernetes.module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "module.kubernetes.provider.google",
      "instances": []
    },
    {
      "module": "module.kubernetes.module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "module.kubernetes.provider.google",
      "instances": []
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "module.kubernetes.provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/mlevostre-project/global/networks/mlevostre-kubernetes-cluster-vpc",
            "name": "mlevostre-kubernetes-cluster-vpc",
            "project": "mlevostre-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mlevostre-project/global/networks/mlevostre-kubernetes-cluster-vpc"
          }
        }
      ]
    },
    {
      "module": "module.kubernetes.module.aliased-subnetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "basic",
      "each": "list",
      "provider": "module.kubernetes.provider.google"
    },
    {
      "module": "module.kubernetes.module.aliased-subnetwork",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ranged",
      "each": "list",
      "provider": "module.kubernetes.provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-05-09T12:56:45.465-07:00",
            "description": "aliased-subnet subnetwork",
            "gateway_address": "10.100.0.1",
            "id": "projects/mlevostre-project/regions/us-central1/subnetworks/aliased-subnet",
            "ip_cidr_range": "10.100.0.0/24",
            "name": "aliased-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mlevostre-project/global/networks/mlevostre-kubernetes-cluster-vpc",
            "private_ip_google_access": true,
            "project": "mlevostre-project",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.101.0.0/21",
                "range_name": "range-1"
              },
              {
                "ip_cidr_range": "10.102.0.0/24",
                "range_name": "range-2"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mlevostre-project/regions/us-central1/subnetworks/aliased-subnet"
          },
          "dependencies": [
            "module.kubernetes.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}